WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244069
AX: AccessibilityObject does not always update its m_lastKnownIsIgnoredValue which can result in missing calls to AXObjectCache::childrenChanged
https://bugs.webkit.org/show_bug.cgi?id=244069
Summary
AX: AccessibilityObject does not always update its m_lastKnownIsIgnoredValue ...
Tyler Wilcock
Reported
2022-08-17 17:23:42 PDT
AccessibilityObject does not always update its m_lastKnownIsIgnoredValue which can result in missing calls to AXObjectCache::childrenChanged
Attachments
Patch
(20.66 KB, patch)
2022-08-17 19:16 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(22.40 KB, patch)
2022-08-18 09:45 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-08-17 17:23:52 PDT
<
rdar://problem/98806646
>
Tyler Wilcock
Comment 2
2022-08-17 19:16:31 PDT
Created
attachment 461703
[details]
Patch
Tyler Wilcock
Comment 3
2022-08-18 09:45:45 PDT
Created
attachment 461713
[details]
Patch
chris fleizach
Comment 4
2022-08-18 10:01:39 PDT
Comment on
attachment 461713
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=461713&action=review
> Source/WebCore/accessibility/AccessibilityObject.cpp:3804 > + if (cache
should we should return immediately if !cache
Tyler Wilcock
Comment 5
2022-08-18 11:14:47 PDT
(In reply to chris fleizach from
comment #4
)
> Comment on
attachment 461713
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=461713&action=review
> > > Source/WebCore/accessibility/AccessibilityObject.cpp:3804 > > + if (cache > > should we should return immediately if !cache
I don't think so, since we'll still want to computeAccessibilityIsIgnored and return that result to the caller (which is not dependent on the cache).
EWS
Comment 6
2022-08-19 09:41:37 PDT
Committed
253598@main
(45a88c53617c): <
https://commits.webkit.org/253598@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 461713
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug