AX: AccessibilityObject does not always update its m_lastKnownIsIgnoredValue which can result in missing calls to AXObjectCache::childrenChanged https://bugs.webkit.org/show_bug.cgi?id=244069 rdar://problem/98806646

Reviewed by Chris Fleizach.

AccessibilityObject has a member variable called m_lastKnownIsIgnoredValue. Currently,
this variable is updated in a manual, best-effort fashion when certain types of dynamic
changes happen (e.g. an object changes `role`s).

There are lots of ways an object can become ignored or un-ignored dynamically, and we miss
some of these with this mechanism. When this happens, we don't properly call childrenChanged,
resulting in an out-of-date tree (which is especially troublesome for the isolated tree).

With this patch, all of this logic is now centralized in AccessibilityObject::accessibilityIsIgnored.
If an object ever computes a different ignored status than it did previously, we will make the
necessary childrenChanged call (as was intended when m_lastKnownIsIgnoredValue was introduced).

* LayoutTests/accessibility/dynamically-ignored-canvas-expected.txt: Added.
* LayoutTests/accessibility/dynamically-ignored-canvas.html: Added.
* LayoutTests/platform/ios/TestExpectations: Enable new test.
* LayoutTests/platform/glib/TestExpectations: Disable new test.
* LayoutTests/platform/win/TestExpectations: Disable new test.
* LayoutTests/platform/ios/accessibility/dynamically-ignored-canvas-expected.txt: Added.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::getOrCreate):
(WebCore::AXObjectCache::handleTextChanged):
(WebCore::AXObjectCache::handleChildrenChanged):
(WebCore::AXObjectCache::handleRoleChanged):
Use new recomputeIsIgnored function.
(WebCore::AXObjectCache::recomputeIsIgnored):
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::accessibilityIsIgnored const):
(WebCore::AccessibilityObject::accessibilityIsIgnoredWithoutCache const):
(WebCore::AccessibilityObject::lastKnownIsIgnoredValue): Deleted.
(WebCore::AccessibilityObject::hasIgnoredValueChanged): Deleted.
* Source/WebCore/accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::recomputeIsIgnored): Added.
* Tools/WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.mm:
Don't create an AccessibilityUIElement with a null child.

Canonical link: https://commits.webkit.org/253598@main